test/static/wrong/module2.kk
module static/wrong/module2 {
  import static/doesNotExist
  import static/b

  alias ok = int
}
